# ae2-bridge

./: .env.default  .gitignore  Dockerfile  alembic.ini  common_services.yaml  compose.yaml  justfile  main.py  pyproject.toml  pytest.ini  socket_main.py
.github/workflows/: pytest.yaml
api/: app.py  decorators.py  routes.py  serialization.py
app/: app.py  config.py  db.py  entrypoint.sh  routes.py  serialization.py  socket.py
app/data/: base.py  dao.py  manifest.py  models.py
app/db/: base.py  manifest.py  models.py
bridge/: socketHandler.lua
common/: config.py  dao.py  manifest.py  models.py  sql_func.py
db/: dao.py  manifest.py  models.py
migrations/: env.py
migrations/versions/: 4d80e413138e_add_items_table.py  d8e6715f2475_add_items_table.py  db84b7559936_base.py  ee93214218cf_add_timescaledb_stuff.py
opencomputers/: Dockerfile  autorun.lua  boot2.lua  elsa.lua  go.lua  instructions.txt  main2.lua  ocemu.cfg  test.lua
opencomputers/bridge/: ae2.lua  client.lua  socketHandler.lua  socket_handler.lua
sockets/: app.py  db.py  event_handler.py  event_types.py  routes.py
start_scripts/: flask.sh  socket.py
tests/: conftest.py  test_dao.py  test_smoke.py
tests/test_api/: test_routes.py
tests/test_opencomputers/: Dockerfile  autorun.lua  entrypoint.lua  init.lua  test_item_count.lua
tests/test_opencomputers/components/: me_interface.lua
tests/test_opencomputers/utils/: ocemu.cfg
tests/test_sockets/: test_routes.py
