[project]
name = "ae2-bridge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.16.2",
    "flask>=3.1.1",
    "flask-socketio>=5.5.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2>=2.9.10",
    "sqlalchemy>=2.0.41",
    "sqlalchemy-timescaledb>=0.4.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.13",
    "ty>=0.0.1a10",
]
